IBM/WhitelistMasker#66